2020-08-12  Nik Nyby  <nnyby@columbia.edu>

	* Fix "new URL" message

2020-08-06  Nik Nyby  <nnyby@columbia.edu>

	* Fix Vimeo video collection

2020-08-05  Nik Nyby  <nnyby@columbia.edu>

	* Fix setting custom URL name: use only hostname

2020-05-22  Nik Nyby  <nnyby@columbia.edu>

	* Don't include CORS credentials in YouTube request.
	* Updated jQuery to 3.5.1

2019-11-01  Nik Nyby  <nnyby@columbia.edu>

	* Fix CORB error when collecting YouTube videos
	* Fix Artstor asset collection

2019-10-31  Nik Nyby  <nnyby@columbia.edu>

	* Update Mediathread url to use *.ctl
	* Remove mediathread.qa url option
	* Update jQuery to 3.4.1

2019-03-27  Nik Nyby  <nnyby@columbia.edu>

	* Fix a CORB request problem that was introduced in Chrome 73.

2018-12-03  Nik Nyby  <nnyby@columbia.edu>

	* Fix more duplicate slash errors in other parts of the code by
	using a proper URL parser.

2018-11-29  Nik Nyby  <nnyby@columbia.edu>

	* Fix duplicate slash error when loading auth state from
	Mediathread.

2018-11-27  Nik Nyby  <nnyby@columbia.edu>

	* Update jQuery to 3.3.1
	* Update URI.js
	* Update underscore.js

2017-11-06  Susan Dreher  <sdreher@columbia.edu>

	* Fix ARTStor image collection.

2017-03-21  Nik Nyby  <nnyby@columbia.edu>

	* Add *.sc.edu to whitelist.

2017-02-23  Nik Nyby  <nnyby@columbia.edu>

	* Send an error when attempting to update the extension over HTTP.
	* Add *.dartmouth.edu to externally connectable whitelist.

2017-02-13  Nik Nyby  <nnyby@columbia.edu>

	* Fixed image collection on blakearchive.org.

2017-02-08  Nik Nyby  <nnyby@columbia.edu>

	* Ignore query params when updating host URL.

2016-05-13  Nik Nyby  <nnyby@columbia.edu>

	* Fixed Go To Collection link.

2016-04-19  Nik Nyby  <nnyby@columbia.edu>

	* Prevent host_url from being set when it's not https.

2016-04-04  Nik Nyby  <nnyby@columbia.edu>

	* Added more specific feedback for "Update settings" button.

2016-02-29  Nik Nyby  <nnyby@columbia.edu>

	* Updated icons.